--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,50 +8,27 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">25,466</td><td></td><td></td></tr>
+<tr><th colspan="8">Smoke</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">160,916</td><td>Smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.UsersTest</td><td><a href="#m0">verifySavedUserDetailsInEditWindow</a></td><td rowspan="1">1742650207706</td><td rowspan="1">14608</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.TransactionsTest</td><td><a href="#m0">verifyAddTransactionWithValidData</a></td><td rowspan="1">1742652079241</td><td rowspan="1">4841</td></tr><tr class="failedodd"><td rowspan="1">test.UsersTest</td><td><a href="#m1">verifyAddUserWithValidDetails</a></td><td rowspan="1">1742652109067</td><td rowspan="1">5332</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">test.LoginTest</td><td><a href="#m2">verifyFieldAndCheckboxLabels</a></td><td rowspan="1">1742651995283</td><td rowspan="1">474</td></tr><tr class="passedeven"><td><a href="#m3">verifyLoginPageTitleAndUrl</a></td><td rowspan="1">1742651981429</td><td rowspan="1">84</td></tr><tr class="passedeven"><td><a href="#m4">verifyLoginUsingValidCredentials</a></td><td rowspan="1">1742652002946</td><td rowspan="1">2084</td></tr><tr class="passedeven"><td><a href="#m5">verifyLoginWithLowercaseInsensitiveEmail</a></td><td rowspan="1">1742652020836</td><td rowspan="1">1770</td></tr><tr class="passedeven"><td><a href="#m6">verifyLoginWithUppercaseInsensitiveEmail</a></td><td rowspan="1">1742652012485</td><td rowspan="1">1563</td></tr><tr class="passedodd"><td rowspan="2">test.LogoutTest</td><td><a href="#m7">verifyLogoutFromLogoutOptionUnderProfile</a></td><td rowspan="1">1742652037318</td><td rowspan="1">1286</td></tr><tr class="passedodd"><td><a href="#m8">verifyReLoginImmediatelyAfterLogout</a></td><td rowspan="1">1742652048312</td><td rowspan="1">4416</td></tr><tr class="passedeven"><td rowspan="1">test.TransactionsTest</td><td><a href="#m9">verifyNavigationToUsersModule</a></td><td rowspan="1">1742652064110</td><td rowspan="1">2286</td></tr><tr class="passedodd"><td rowspan="1">test.UsersTest</td><td><a href="#m10">verifyNavigationToUsersModule</a></td><td rowspan="1">1742652095232</td><td rowspan="1">1666</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">test.UsersTest#verifySavedUserDetailsInEditWindow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [atbs] but found [A B Traders],
-	expected [dasfd] but found [Plant],
-	expected [1234567890] but found [9948021022],
-	expected [abc@yomail.com] but found [Kolkota@plant.com],
-	expected [userss] but found [100013],
-	expected [Plant] but found [null],
-	expected [VCPL - Panthnagar] but found [null],
-	expected [None] but found [null],
-	expected [Testing role] but found [null]
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:46)
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:30)
-	at test.UsersTest.verifySavedUserDetailsInEditWindow(UsersTest.java:209)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:686)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:992)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
+<h2>Test</h2><h3 id="m0">test.TransactionsTest#verifyAddTransactionWithValidData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Successfully submitted!] but found [Feature Code already exists]
+	at test.TransactionsTest.verifyAddTransactionWithValidData(TransactionsTest.java:69)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at org.testng.TestRunner.privateRun(TestRunner.java:739)
-	at org.testng.TestRunner.run(TestRunner.java:614)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
-	at org.testng.TestNG.runSuites(TestNG.java:1112)
-	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.UsersTest#verifyAddUserWithValidDetails</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Successfully submitted!] but found [User name is already exists]
+	at test.UsersTest.verifyAddUserWithValidDetails(UsersTest.java:81)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.LoginTest#verifyFieldAndCheckboxLabels</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.LoginTest#verifyLoginPageTitleAndUrl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test.LoginTest#verifyLoginUsingValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">test.LoginTest#verifyLoginWithLowercaseInsensitiveEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">test.LoginTest#verifyLoginWithUppercaseInsensitiveEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">test.LogoutTest#verifyLogoutFromLogoutOptionUnderProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">test.LogoutTest#verifyReLoginImmediatelyAfterLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">test.TransactionsTest#verifyNavigationToUsersModule</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">test.UsersTest#verifyNavigationToUsersModule</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
