implemented getdyncamic url and removed hardcoding for pagetitles and URLs

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,27 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Smoke</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">160,916</td><td>Smoke</td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,963</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.TransactionsTest</td><td><a href="#m0">verifyAddTransactionWithValidData</a></td><td rowspan="1">1742652079241</td><td rowspan="1">4841</td></tr><tr class="failedodd"><td rowspan="1">test.UsersTest</td><td><a href="#m1">verifyAddUserWithValidDetails</a></td><td rowspan="1">1742652109067</td><td rowspan="1">5332</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">test.LoginTest</td><td><a href="#m2">verifyFieldAndCheckboxLabels</a></td><td rowspan="1">1742651995283</td><td rowspan="1">474</td></tr><tr class="passedeven"><td><a href="#m3">verifyLoginPageTitleAndUrl</a></td><td rowspan="1">1742651981429</td><td rowspan="1">84</td></tr><tr class="passedeven"><td><a href="#m4">verifyLoginUsingValidCredentials</a></td><td rowspan="1">1742652002946</td><td rowspan="1">2084</td></tr><tr class="passedeven"><td><a href="#m5">verifyLoginWithLowercaseInsensitiveEmail</a></td><td rowspan="1">1742652020836</td><td rowspan="1">1770</td></tr><tr class="passedeven"><td><a href="#m6">verifyLoginWithUppercaseInsensitiveEmail</a></td><td rowspan="1">1742652012485</td><td rowspan="1">1563</td></tr><tr class="passedodd"><td rowspan="2">test.LogoutTest</td><td><a href="#m7">verifyLogoutFromLogoutOptionUnderProfile</a></td><td rowspan="1">1742652037318</td><td rowspan="1">1286</td></tr><tr class="passedodd"><td><a href="#m8">verifyReLoginImmediatelyAfterLogout</a></td><td rowspan="1">1742652048312</td><td rowspan="1">4416</td></tr><tr class="passedeven"><td rowspan="1">test.TransactionsTest</td><td><a href="#m9">verifyNavigationToUsersModule</a></td><td rowspan="1">1742652064110</td><td rowspan="1">2286</td></tr><tr class="passedodd"><td rowspan="1">test.UsersTest</td><td><a href="#m10">verifyNavigationToUsersModule</a></td><td rowspan="1">1742652095232</td><td rowspan="1">1666</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.LogoutTest</td><td><a href="#m0">verifyReLoginImmediatelyAfterLogout</a></td><td rowspan="1">1742712096116</td><td rowspan="1">3170</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">test.TransactionsTest#verifyAddTransactionWithValidData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Successfully submitted!] but found [Feature Code already exists]
-	at test.TransactionsTest.verifyAddTransactionWithValidData(TransactionsTest.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.UsersTest#verifyAddUserWithValidDetails</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Successfully submitted!] but found [User name is already exists]
-	at test.UsersTest.verifyAddUserWithValidDetails(UsersTest.java:81)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.LoginTest#verifyFieldAndCheckboxLabels</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.LoginTest#verifyLoginPageTitleAndUrl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.LoginTest#verifyLoginUsingValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test.LoginTest#verifyLoginWithLowercaseInsensitiveEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">test.LoginTest#verifyLoginWithUppercaseInsensitiveEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">test.LogoutTest#verifyLogoutFromLogoutOptionUnderProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">test.LogoutTest#verifyReLoginImmediatelyAfterLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">test.TransactionsTest#verifyNavigationToUsersModule</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">test.UsersTest#verifyNavigationToUsersModule</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">test.LogoutTest#verifyReLoginImmediatelyAfterLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
